# sporepedia_getter

./: Cargo.toml  README.md
src/: main.rs  new.cpp
