[package]
name = "sporepedia_getter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
futures = "0.3.29"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.34.0", features = ["full"] }
